--- a/404.html
+++ b/404.html
@@ -16,19 +16,19 @@
 
   
   <meta name="author" content="Internet" />
-  <meta name="description" content="Hugo is one of the most popular open-source static site generators. With its amazing speed and flexibility, Hugo makes building websites fun again." />
+  <meta name="description" content="" />
 
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@gohugoio" />
-  <meta name="twitter:title" content="郭扑克儿 Paco guopuke" />
-  <meta name="twitter:description" content="Hugo is one of the most popular open-source static site generators. With its amazing speed and flexibility, Hugo makes building websites fun again." />
+  <meta name="twitter:title" content="郭扑克儿-BigPaco-guopuke" />
+  <meta name="twitter:description" content="" />
   <meta name="twitter:image" content="https://guopuke.github.io/img/avatar.jpg" />
 
   
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="郭扑克儿 Paco guopuke" />
-  <meta property="og:description" content="Hugo is one of the most popular open-source static site generators. With its amazing speed and flexibility, Hugo makes building websites fun again." />
+  <meta property="og:title" content="郭扑克儿-BigPaco-guopuke" />
+  <meta property="og:description" content="" />
   <meta property="og:url" content="" />
   <meta property="og:image" content="https://guopuke.github.io/img/avatar.jpg" />
 
