--- a/404.html
+++ b/404.html
@@ -73,7 +73,7 @@
 
 
 
-<link rel="stylesheet" href="//cdn.bootcss.com/video.js/6.2.8/alt/video-js-cdn.min.css" />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/video.js/6.2.8/alt/video-js-cdn.min.css" rel="stylesheet">
 
 <link rel="stylesheet" href="https://guopuke.github.io/css/bundle.ff02473a9a.css" />
 
